--- a/lab-eddie/src/style/base/_base.scss
+++ b/lab-eddie/src/style/base/_base.scss
@@ -33,6 +33,7 @@ input[type="text"], input[type="number"] {
   width: 50%;
   float: left;
   margin-left: 25%;
+  margin-top: $gutter-sm;
   font-size: 1.5vw;
   border-radius: $border-radius;
   transition: $trans-prim;
