--- a/lab-eddie/src/component/category/_category.scss
+++ b/lab-eddie/src/component/category/_category.scss
@@ -16,9 +16,12 @@
   h3, p {
     float: left;
     width: 50%;
-    margin-left: 25%;
+    margin-left: 10%;
     margin-top: $gutter-sm;
     font-size: 4vh;
+  }
+  button {
+    margin-left: 10%;
   }
 
   span>button {
@@ -28,11 +31,41 @@
     padding: 0;
     margin-right: 2%;
   }
+  input, input[type="number"] {
+    width: 80%;
+    float: left;
+    margin-left: 10%;
+    margin-top: $gutter-sm;
+    font-size: 1.5vw;
+    border-radius: $border-radius;
+    transition: $trans-prim;
+
+  }
 
 }
 
+.cat-parent {
+  height: 15vh;
+  overflow-x: hidden;
+  transition: 350ms all;
+
+  ul {
+    display: none;
+  }
+
+  &:hover {
+     height: 60vh;
+     overflow-x: none;
+     ul {
+       display: block;
+     }
+   }
+}
+
 .cat-body {
-  width: 100%;
+  width: 80%;
   float: left;
-  margin: 0;
+  margin: $gutter-sm 10%;
+  background: white;
+  border: 4px solid black;
 }
