--- a/lab-eddie/src/component/category/_category.scss
+++ b/lab-eddie/src/component/category/_category.scss
@@ -68,4 +68,12 @@
   margin: $gutter-sm 10%;
   background: white;
   border: 4px solid black;
+
+  span>button {
+    color: black;
+  }
+
+  button {
+    margin-bottom: $gutter-sm;
+  }
 }
