--- a/lab-eddie/src/style/lib/_vars.scss
+++ b/lab-eddie/src/style/lib/_vars.scss
@@ -1,10 +1,10 @@
 $black: #111;
 $white: #fff;
-$primary: #111fff;
-$secondary: #555aaa;
+$primary: #506B6B;
+$secondary: #B0EBEA;
 $btn-primary: $secondary / 2;
 $trans-prim: 350ms all;
 $font-primary: 'helvetica';
-$gutter-lg: 5%;
+$gutter-lg: 5vh;
 $gutter-sm: $gutter-lg / 2;
 $border-radius: 3px;
