--- a/lab-eddie/src/style/base/_base.scss
+++ b/lab-eddie/src/style/base/_base.scss
@@ -8,6 +8,7 @@ a {
 body {
   font-family: $font-primary;
   color: $secondary;
+  background: $primary;
 }
 
 button {
@@ -28,12 +29,22 @@ button {
 }
 
 main>span>form {
+  width: 50%;
+  height: 40vh;
+  float: left;
+  margin-left: 25%;
+  margin-top: 2vh;
+  border: 4px solid black;
+  background: $secondary;
+  border-radius: $border-radius;
+
   input[type=text], input[type=number] {
     box-sizing: border-box;
     padding: $gutter-sm/2;
-    width: 50%;
+    width: 80%;
+    height: 10vh;
+    margin-left: 10%;
     float: left;
-    margin-left: 25%;
     margin-top: $gutter-sm;
     font-size: 1.5vw;
     border-radius: $border-radius;
@@ -46,6 +57,8 @@ main>span>form {
   }
 
   button {
+    height: 8vh;
+    font-size: 4vh;
     margin-top: $gutter-sm;
   }
 }
