--- a/lab-eddie/src/style/layout/_header.scss
+++ b/lab-eddie/src/style/layout/_header.scss
@@ -1,7 +1,17 @@
 header {
-  position: fixed;
+  position: sticky;
   top: 0;
   padding: $gutter-sm;
   font-size: 3vw;
   width: 100%;
+  height: 1vh;
+  background: white;
+
+  h1 {
+    width: 50%;
+    float: left;
+    margin-left: 25%;
+    text-align: center;
+    font-size: 1.5vmax;
+  }
 }
