--- a/lab-eddie/src/style/base/_base.scss
+++ b/lab-eddie/src/style/base/_base.scss
@@ -11,6 +11,12 @@ body {
   background: $primary;
 }
 
+main {
+  float: left;
+  width: 100%;
+  padding-bottom: 10vh;
+}
+
 button {
   border: none;
   color: white;
