--- a/lab-eddie/src/style/layout/_header.scss
+++ b/lab-eddie/src/style/layout/_header.scss
@@ -1,7 +1,7 @@
 header {
   position: sticky;
   top: 0;
-  padding: $gutter-sm;
+  padding: $gutter-sm 0;
   font-size: 3vw;
   width: 100%;
   height: 1vh;
